# ToDo

./: Cargo.toml  README.md  ascii.txt  compilar.sh  tareas.json
src/: app.rs  ascii_art.rs  main.rs  scraper.rs  tarea.rs  toast.rs
