[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = "1.0.210"
serde_json = "1.0.128"

[profile.release]
panic = "abort"  # Optional: Reduces binary size
lto = true       # Optional: Enables Link Time Optimization for smaller binary
